--- a/more.html
+++ b/more.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends - Danny Talk</title>
+    <title>Settings - Danny Talk</title>
 </head>
 <body>
     <div class="status-bar">
@@ -24,7 +24,7 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">Settings</h1>
         <div class="screen-header__icons">
             <span>
                 <i class="fas fa-search fa-lg"></i>
@@ -33,45 +33,70 @@
                 <i class="fas fa-music fa-lg"></i>
             </span>
             <span>
-                <i class="fas fa-cog fa-lg"></i>
+                <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
             </span>
         </div>
     </header>
 
-    <a id="friends-display-link">
+    <!-- <a id="friends-display-link">
         <i class="fas fa-info-circle"></i>Friends' Names Display
-    </a>
+    </a> -->
 
-    <main class="friends-screen">
+    <main class="main-screen more-screen">
         <div class="user-component">
             <div class="user-component__column">
                 <img src="profile_sample.jpg" class="user-component__avatar user-component__avatar--xl" />
                 <div class="user-component__text">
                     <h4 class="user-component__title">Danny Kim</h4>
-                    <!-- <h6 class="user-component__subtitle">This Text whatever</h6> -->
+                    <h6 class="user-component__subtitle">+82 10-1234-5678 <i class="fas fa-exclamation-circle"></i></h6>
                 </div>
             </div>
             <div class="user-component__column">
+                <i class="fas fa-envelope-open-text fa-2x"></i>
             </div>
         </div>
-        <div class="friends-screen__channel">
-            <div class="friends-screen__channel-header">
-                <span>Channel</span>
-                <i class="fas fa-chevron-up fa-xs"></i>
+
+        <div class="icon-row">
+            <div class="icon-row__icon">
+                <i class="far fa-calendar-check"></i>
+                <span>Calendar</span>
             </div>
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="profile_sample.jpg" class="user-component__avatar user-component__avatar--sm" />
-                    <div class="user-component__text">
-                        <h4 class="user-component__title user-compoent__title-not-bold">Channel</h4>
-                        <!-- <h6 class="user-component__subtitle">This Text whatever</h6> -->
-                    </div>
+            <div class="icon-row__icon">
+                <i class="far fa-hdd"></i>
+                <span>Talk Drive</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="far fa-grin-tears"></i>
+                <span>Emoticons</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="fas fa-brush"></i>
+                <span>Themes</span>
+            </div>
+            <!-- <div class="icon-row__icon">
+                <i class="far fa-user-circle"></i>
+                <span>Account</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="far fa-comments"></i>
+                <span>Openchat</span>
+            </div> -->
+        </div>
+
+        <div class="more-suggestions">
+            <h4 class="more-suggestions__title">Suggestions</h4>
+            <div class="more-suggestions__icons">
+                <div class="more-suggestions__icon">
+                    <div class="more-suggestions__icon-image">
+                        <i class="fas fa-quote-right"></i> 
+                    </div>  
+                    <span class="more-suggestions__icon-text">Danny Story</span>
                 </div>
-                <div class="user-component__column">
-                    <div>
-                        <span>2</span>
-                        <i class="fas fa-chevron-right fa-xs"></i>
-                    </div>
+                <div class="more-suggestions__icon">
+                    <div class="more-suggestions__icon-image">
+                        <i class="fas fa-quote-right"></i> 
+                    </div>  
+                    <span class="more-suggestions__icon-text">Danny Story</span>
                 </div>
             </div>
         </div>
@@ -89,12 +114,16 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
-                <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a>
+                <a class="nav__link" href="friends.html">
+                    <!-- <i class="fas fa-user fa-2x"></i> -->
+                    <i class="far fa-user fa-2x"></i>
+                </a>
             </li class="nav__btn">
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav__chats-notification">1</span>
                     <i class="far fa-comment fa-2x"></i>
+                    <!-- <i class="fas fa-comment fa-2x"></i> -->
                 </a>
             </li class="nav__btn">
             <li class="nav__btn">
@@ -108,10 +137,9 @@
             </li class="nav__btn">
         </ul>
     </nav>
-    <div id="splash-screen">
-        <i class="fas fa-comment"></i>
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
     </div>
-
     <div id="no-mobile">
         <span>Your screen is too big</span>
     </div>
